@@ -14,9 +14,10 @@ import static org.opensearch.sql.util.MatcherUtils.verifyDataRows;
 import static org.opensearch.sql.util.MatcherUtils.verifySchema;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import org.json.JSONObject;
 import org.junit.Test;
 import org.opensearch.sql.ppl.PPLIntegTestCase;
@@ -49,6 +50,16 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     loadIndex(Index.GRAPH_AIRPORTS);
   }
 
+  /** Null-safe map helper since {@code Map.of()} rejects null values. */
+  @SuppressWarnings("unchecked")
+  private static Map<String, Object> mapOf(Object... keysAndValues) {
+    LinkedHashMap<String, Object> map = new LinkedHashMap<>();
+    for (int i = 0; i < keysAndValues.length; i += 2) {
+      map.put((String) keysAndValues[i], keysAndValues[i + 1]);
+    }
+    return map;
+  }
+
   // ==================== Employee Hierarchy Tests ====================
 
   /** Test 1: Basic employee hierarchy traversal. Find all managers in the reporting chain. */
@@ -59,9 +70,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
 
@@ -73,12 +83,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2))),
-        rows("Eliot", "Ron", 2, List.of(List.of("Ron", "Andrew", 3))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Dev", "Eliot", 1, List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))),
+        rows("Eliot", "Ron", 2, List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
-        rows("Asya", "Ron", 5, List.of(List.of("Ron", "Andrew", 3))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Asya", "Ron", 5, List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /** Test 2: Employee hierarchy traversal with depth field. */
@@ -89,9 +99,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " depthField=level"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -104,12 +113,32 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2, 0))),
-        rows("Eliot", "Ron", 2, List.of(List.of("Ron", "Andrew", 3, 0))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4, 0))),
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(mapOf("name", "Eliot", "reportsTo", "Ron", "id", 2, "level", 0))),
+        rows(
+            "Eliot",
+            "Ron",
+            2,
+            List.of(mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "level", 0))),
+        rows(
+            "Ron",
+            "Andrew",
+            3,
+            List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4, "level", 0))),
         rows("Andrew", null, 4, Collections.emptyList()),
-        rows("Asya", "Ron", 5, List.of(List.of("Ron", "Andrew", 3, 0))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4, 0))));
+        rows(
+            "Asya",
+            "Ron",
+            5,
+            List.of(mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "level", 0))),
+        rows(
+            "Dan",
+            "Andrew",
+            6,
+            List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4, "level", 0))));
   }
 
   /** Test 3: Employee hierarchy with maxDepth=1 (allows 2 levels of traversal). */
@@ -120,9 +149,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " maxDepth=1"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -135,20 +163,30 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2), List.of("Ron", "Andrew", 3))),
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(
+                Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2),
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
         rows(
             "Eliot",
             "Ron",
             2,
-            List.of(List.of("Ron", "Andrew", 3), Arrays.asList("Andrew", null, 4))),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+            List.of(
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
         rows(
             "Asya",
             "Ron",
             5,
-            List.of(List.of("Ron", "Andrew", 3), Arrays.asList("Andrew", null, 4))),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+            List.of(
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /** Test 4: Query Dev's complete reporting chain: Dev->Eliot->Ron->Andrew */
@@ -160,9 +198,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Dev'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
 
@@ -172,7 +209,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reportsTo", "string"),
         schema("id", "int"),
         schema("reportingHierarchy", "array"));
-    verifyDataRows(result, rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2))));
+    verifyDataRows(
+        result,
+        rows("Dev", "Eliot", 1, List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))));
   }
 
   // ==================== Airport Connections Tests ====================
@@ -185,9 +224,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=airport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=airport"
+                    + " edge=connects-->airport"
                     + " supportArray=true"
                     + " as reachableAirports",
                 TEST_INDEX_GRAPH_AIRPORTS, TEST_INDEX_GRAPH_AIRPORTS));
@@ -199,11 +237,20 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("JFK", List.of("BOS", "ORD"), List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("BOS", List.of("JFK", "PWM"), List.of(List.of("BOS", List.of("JFK", "PWM")))),
-        rows("ORD", List.of("JFK"), List.of(List.of("ORD", List.of("JFK")))),
-        rows("PWM", List.of("BOS", "LHR"), List.of(List.of("PWM", List.of("BOS", "LHR")))),
-        rows("LHR", List.of("PWM"), List.of(List.of("LHR", List.of("PWM")))));
+        rows(
+            "JFK",
+            List.of("BOS", "ORD"),
+            List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows(
+            "BOS",
+            List.of("JFK", "PWM"),
+            List.of(Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))),
+        rows("ORD", List.of("JFK"), List.of(Map.of("airport", "ORD", "connects", List.of("JFK")))),
+        rows(
+            "PWM",
+            List.of("BOS", "LHR"),
+            List.of(Map.of("airport", "PWM", "connects", List.of("BOS", "LHR")))),
+        rows("LHR", List.of("PWM"), List.of(Map.of("airport", "LHR", "connects", List.of("PWM")))));
   }
 
   /** Test 6: Find airports reachable from JFK within maxDepth=1. */
@@ -215,9 +262,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where airport = 'JFK'"
                     + " | graphLookup %s"
-                    + " startField=airport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=airport"
+                    + " edge=connects-->airport"
                     + " maxDepth=1"
                     + " supportArray=true"
                     + " as reachableAirports",
@@ -233,7 +279,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         rows(
             "JFK",
             List.of("BOS", "ORD"),
-            List.of(List.of("JFK", List.of("BOS", "ORD")), List.of("BOS", List.of("JFK", "PWM")))));
+            List.of(
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   /** Test 7: Find airports with default depth(=0) and start value of list */
@@ -245,9 +293,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where airport = 'JFK'"
                     + " | graphLookup %s"
-                    + " startField=connects"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=connects"
+                    + " edge=connects-->airport"
                     + " depthField=numConnections"
                     + " as reachableAirports",
                 TEST_INDEX_GRAPH_AIRPORTS, TEST_INDEX_GRAPH_AIRPORTS));
@@ -258,7 +305,11 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("JFK", List.of("BOS", "ORD"), List.of(List.of("BOS", List.of("JFK", "PWM"), 0))));
+        rows(
+            "JFK",
+            List.of("BOS", "ORD"),
+            List.of(
+                mapOf("airport", "BOS", "connects", List.of("JFK", "PWM"), "numConnections", 0))));
   }
 
   /**
@@ -272,9 +323,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=nearestAirport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=nearestAirport"
+                    + " edge=connects-->airport"
                     + " as reachableAirports",
                 TEST_INDEX_GRAPH_TRAVELERS, TEST_INDEX_GRAPH_AIRPORTS));
 
@@ -285,9 +335,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("reachableAirports", "array"));
     verifyDataRows(
         result,
-        rows("Dev", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("Eliot", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD")))),
-        rows("Jeff", "BOS", List.of(List.of("BOS", List.of("JFK", "PWM")))));
+        rows("Dev", "JFK", List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows("Eliot", "JFK", List.of(Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")))),
+        rows("Jeff", "BOS", List.of(Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   /**
@@ -302,9 +352,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Dev'"
                     + " | graphLookup %s"
-                    + " startField=nearestAirport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=nearestAirport"
+                    + " edge=connects-->airport"
                     + " depthField=hops"
                     + " as reachableAirports",
                 TEST_INDEX_GRAPH_TRAVELERS, TEST_INDEX_GRAPH_AIRPORTS));
@@ -314,7 +363,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         schema("name", "string"),
         schema("nearestAirport", "string"),
         schema("reachableAirports", "array"));
-    verifyDataRows(result, rows("Dev", "JFK", List.of(List.of("JFK", List.of("BOS", "ORD"), 0))));
+    verifyDataRows(
+        result,
+        rows(
+            "Dev",
+            "JFK",
+            List.of(mapOf("airport", "JFK", "connects", List.of("BOS", "ORD"), "hops", 0))));
   }
 
   /**
@@ -329,9 +383,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Jeff'"
                     + " | graphLookup %s"
-                    + " startField=nearestAirport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=nearestAirport"
+                    + " edge=connects-->airport"
                     + " maxDepth=1"
                     + " supportArray=true"
                     + " as reachableAirports",
@@ -348,9 +401,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             "Jeff",
             "BOS",
             List.of(
-                List.of("BOS", List.of("JFK", "PWM")),
-                List.of("JFK", List.of("BOS", "ORD")),
-                List.of("PWM", List.of("BOS", "LHR")))));
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")),
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "PWM", "connects", List.of("BOS", "LHR")))));
   }
 
   // ==================== Bidirectional Traversal Tests ====================
@@ -364,10 +417,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Ron'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
-                    + " direction=bi"
+                    + " start=reportsTo"
+                    + " edge=reportsTo<->name"
                     + " as connections",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
 
@@ -384,9 +435,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             "Andrew",
             3,
             List.of(
-                List.of("Ron", "Andrew", 3),
-                Arrays.asList("Andrew", null, 4),
-                List.of("Dan", "Andrew", 6))));
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4),
+                Map.of("name", "Dan", "reportsTo", "Andrew", "id", 6))));
   }
 
   /**
@@ -401,10 +452,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where airport = 'ORD'"
                     + " | graphLookup %s"
-                    + " startField=connects"
-                    + " fromField=connects"
-                    + " toField=airport"
-                    + " direction=bi"
+                    + " start=connects"
+                    + " edge=connects<->airport"
                     + " as allConnections",
                 TEST_INDEX_GRAPH_AIRPORTS, TEST_INDEX_GRAPH_AIRPORTS));
 
@@ -418,7 +467,9 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         rows(
             "ORD",
             List.of("JFK"),
-            List.of(List.of("JFK", List.of("BOS", "ORD")), List.of("BOS", List.of("JFK", "PWM")))));
+            List.of(
+                Map.of("airport", "JFK", "connects", List.of("BOS", "ORD")),
+                Map.of("airport", "BOS", "connects", List.of("JFK", "PWM")))));
   }
 
   // ==================== Filter Tests ====================
@@ -435,9 +486,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " filter=(id > 3)"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -459,10 +509,10 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
         result,
         rows("Dev", "Eliot", 1, Collections.emptyList()),
         rows("Eliot", "Ron", 2, Collections.emptyList()),
-        rows("Ron", "Andrew", 3, List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Ron", "Andrew", 3, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", null, 4, Collections.emptyList()),
         rows("Asya", "Ron", 5, Collections.emptyList()),
-        rows("Dan", "Andrew", 6, List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Dan", "Andrew", 6, List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   /**
@@ -477,9 +527,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Ron'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " filter=(name != 'Andrew')"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -506,9 +555,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Dev'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " maxDepth=3"
                     + " filter=(id <= 3)"
                     + " as reportingHierarchy",
@@ -524,7 +572,13 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     // -> then Ron.reportsTo=Andrew -> Andrew(id=4) is filtered out -> stops
     verifyDataRows(
         result,
-        rows("Dev", "Eliot", 1, List.of(List.of("Eliot", "Ron", 2), List.of("Ron", "Andrew", 3))));
+        rows(
+            "Dev",
+            "Eliot",
+            1,
+            List.of(
+                Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2),
+                Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))));
   }
 
   // ==================== Edge Cases ====================
@@ -538,9 +592,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'NonExistent'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
 
@@ -562,9 +615,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name = 'Andrew'"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
 
@@ -585,9 +637,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy"
                     + " | stats count() by name",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -611,9 +662,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " as reportingHierarchy"
                     + " | fields name, reportingHierarchy",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -621,12 +671,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifySchema(result, schema("name", "string"), schema("reportingHierarchy", "array"));
     verifyDataRows(
         result,
-        rows("Dev", List.of(List.of("Eliot", "Ron", 2))),
-        rows("Eliot", List.of(List.of("Ron", "Andrew", 3))),
-        rows("Ron", List.of(Arrays.asList("Andrew", null, 4))),
+        rows("Dev", List.of(Map.of("name", "Eliot", "reportsTo", "Ron", "id", 2))),
+        rows("Eliot", List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Ron", List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))),
         rows("Andrew", Collections.emptyList()),
-        rows("Asya", List.of(List.of("Ron", "Andrew", 3))),
-        rows("Dan", List.of(Arrays.asList("Andrew", null, 4))));
+        rows("Asya", List.of(Map.of("name", "Ron", "reportsTo", "Andrew", "id", 3))),
+        rows("Dan", List.of(mapOf("name", "Andrew", "reportsTo", null, "id", 4))));
   }
 
   // ==================== Batch Mode Tests ====================
@@ -646,9 +696,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name in ('Dev', 'Asya')"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo-->name"
                     + " depthField=depth"
                     + " maxDepth=3"
                     + " batchMode=true"
@@ -659,8 +708,12 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "Eliot", 1), List.of("Asya", "Ron", 5)),
-            List.of(List.of("Ron", "Andrew", 3, 0), Arrays.asList("Andrew", null, 4, 1))));
+            List.of(
+                Map.of("name", "Dev", "reportsTo", "Eliot", "id", 1),
+                Map.of("name", "Asya", "reportsTo", "Ron", "id", 5)),
+            List.of(
+                mapOf("name", "Ron", "reportsTo", "Andrew", "id", 3, "depth", 0),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4, "depth", 1))));
   }
 
   /**
@@ -675,9 +728,8 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
             String.format(
                 "source=%s"
                     + " | graphLookup %s"
-                    + " startField=nearestAirport"
-                    + " fromField=connects"
-                    + " toField=airport"
+                    + " start=nearestAirport"
+                    + " edge=connects-->airport"
                     + " batchMode=true"
                     + " depthField=depth"
                     + " maxDepth=3"
@@ -692,11 +744,14 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "JFK"), List.of("Eliot", "JFK"), List.of("Jeff", "BOS")),
             List.of(
-                List.of("JFK", List.of("BOS", "ORD"), 0),
-                List.of("BOS", List.of("JFK", "PWM"), 0),
-                List.of("PWM", List.of("BOS", "LHR"), 1))));
+                Map.of("name", "Dev", "nearestAirport", "JFK"),
+                Map.of("name", "Eliot", "nearestAirport", "JFK"),
+                Map.of("name", "Jeff", "nearestAirport", "BOS")),
+            List.of(
+                mapOf("airport", "JFK", "connects", List.of("BOS", "ORD"), "depth", 0),
+                mapOf("airport", "BOS", "connects", List.of("JFK", "PWM"), "depth", 0),
+                mapOf("airport", "PWM", "connects", List.of("BOS", "LHR"), "depth", 1))));
   }
 
   /**
@@ -711,12 +766,10 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
                 "source=%s"
                     + " | where name in ('Dev', 'Dan')"
                     + " | graphLookup %s"
-                    + " startField=reportsTo"
-                    + " fromField=reportsTo"
-                    + " toField=name"
+                    + " start=reportsTo"
+                    + " edge=reportsTo<->name"
                     + " depthField=depth"
                     + " maxDepth=3"
-                    + " direction=bi"
                     + " batchMode=true"
                     + " as connections",
                 TEST_INDEX_GRAPH_EMPLOYEES, TEST_INDEX_GRAPH_EMPLOYEES));
@@ -727,12 +780,14 @@ public class CalcitePPLGraphLookupIT extends PPLIntegTestCase {
     verifyDataRows(
         result,
         rows(
-            List.of(List.of("Dev", "Eliot", 1), List.of("Dan", "Andrew", 6)),
             List.of(
-                List.of("Dev", "Eliot", 1, 0),
-                List.of("Eliot", "Ron", 2, 0),
-                Arrays.asList("Andrew", null, 4, 0),
-                List.of("Dan", "Andrew", 6, 0),
-                List.of("Asya", "Ron", 5, 1))));
+                Map.of("name", "Dev", "reportsTo", "Eliot", "id", 1),
+                Map.of("name", "Dan", "reportsTo", "Andrew", "id", 6)),
+            List.of(
+                mapOf("name", "Dev", "reportsTo", "Eliot", "id", 1, "depth", 0),
+                mapOf("name", "Eliot", "reportsTo", "Ron", "id", 2, "depth", 0),
+                mapOf("name", "Andrew", "reportsTo", null, "id", 4, "depth", 0),
+                mapOf("name", "Dan", "reportsTo", "Andrew", "id", 6, "depth", 0),
+                mapOf("name", "Asya", "reportsTo", "Ron", "id", 5, "depth", 1))));
   }
 }
